styles/main.css
/*-------------------------------------------- COLORS */

/*-------------------------------------------- NAVIGATION BAR */

.logo {
    margin: 10px auto;
    max-height: 50%;
    max-width: 120px;
    border-radius: 6.5rem!important;
}

.navbar {
    flex-direction: column;
   /* 
   
   background-image: url("../images/background-01.png");
   */
}

.nav-link {
    color: black;
}

/*-------------------------------------------- BODY */

.section-wrapper {
    margin-left: 2%;
    margin-right: 2%;
    margin-top: 2.5%;
    margin-bottom: 2%;
}

/*-------------------------------------------- GALLERY */

section h1 {
    text-align: center;
}



.imagerow {
    margin-bottom: 5%;
}

.hover-shadow {
    max-width: 100%;
    max-height: 100%;
}

.gallery-container {
    justify-content: center;
}

.modal-dialog {
    flex: 1 1 1px;
    max-width: 983px;
    max-height: 983px;
}

.modal-content {
    width: 100%;
    height: auto;
}

#gallery img {
    max-width: 100%;
}

.carousel-item img {
    width: 70%;
    height: auto;
    object-fit: contain;
}

/*
.mod {
    display: -ms-flexbox;
    display: flex;
    -ms-flex-align: center;
    align-items: center;
    -ms-flex-pack: center;
    justify-content: center;
    padding-right: 0!important
}/*


/*-------------------------------------------- SHOP */

.shop {
    margin-bottom: 40%;
}
/*
.product-row {
    justify-content:inline;
}
*/

h4 {
    font-weight: 600;
}

p {
    font-size: 12px;
    margin-top: 5px;
}

.price {
    font-size: 30px;
    margin: 0 auto;
    color: #333;
}

.right {
    /*
    float:right;
    border-bottom: 2px solid #4B8E4B;*/
}

.thumbnail {
    opacity: 0.70;
    -webkit-transition: all 0.5s;
    transition: all 0.5s;
}

.thumbnail:hover {
    opacity: 1.00;
    box-shadow: 0px 0px 10px #4bc6ff;
}

.line {
    margin-bottom: 5px;
}

img {
    object-fit: contain;
    width: 100%;
}

@media screen and (max-width: 770px) {
    .right {
        float: left;
        width: 100%;
    }
}

/*-------------------------------------------- FOOTER */

.footer {
    background-color: white;
    padding-top: 1%;
    padding-bottom: 0.5%;
    
}

.footer ul li {
    display: inline-block;
}

.footer a {
    color: black;
}

.footercol {
    display: flex;
    align-items: center;
}

/*-------------------------------------------- MEDIA QUERIES */

@media (min-width: 576px) {
    .carousel-item img {
        height: 70%;
    }
    .gallery-col {
        margin-top: 2%;
    }
    .shop {
        margin-bottom: 30%;
    }

    .shop .row{
        justify-content: space-between;
    }
    .section-wrapper {
        margin-left: 9%;
        margin-right: 9%;
        margin-top: 2.5%;
        margin-bottom: 2%;
    }

}

@media (min-width: 768px) {
    #gallery img {
        height: 100%;
    }
    .shop {
        margin-bottom: 20%;
    }
}

@media (min-width: 992px) {
    .carousel-item img {
        height: 60%;
    }
    .shop {
        margin-bottom: 10%;
    }
}

/*-------------------------------------------- TESTING */

.scrolling-wrapper{
    display: flex;
    flex-wrap: nowrap;!important;
    overflow-x: auto;  !important;
    -webkit-overflow-scrolling: touch;!important;
    width:auto;!important;
    white-space:nowrap;!important;

  }
  .col-10 {
    flex: 0 0 auto;
    padding-left:1px;
    padding-right:1px;
  }

  @media (min-width: 576px) {
    
    .scrolling-wrapper{
        display: flex;
        overflow-x:initial;
        flex-wrap: wrap;
       
      }
      .card {
        
      }
      .logo {
        margin: 10px auto;
        max-height: 80%;
        max-width: 200px;
        border-radius: 6.5rem!important;
    }
}

